# chess

./: .gitignore  CMakeLists.txt  README.md  build.bat  chess.sln  chess.vcxproj  chess.vcxproj.filters  clear.bat
scripts/: build.ps1  clear.ps1
src/chess/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  Entity.h  Rect.cpp  Rect.h  Shader.cpp  Shader.h  Window.cpp  Window.h  assert.h  chess.cpp  create.cpp  create.h  game.cpp  game.h  object.cpp  object.h  renderer.cpp  renderer.h  resource.aps  resource.h  resource.rc  util.cpp  util.h  utility.cpp  utility.h  vector.h  window.cpp  window.h
src/chess/shader/: basic.shader
